- Rename fig to docker-compose

Pirozhki 0.2.0, 2014-12-30
--------------------------
- Change docker restart policy. (restart: always)
- Add nginx.
- Add default kibana template.
- Add standalone elasticsearch.
- Add logstash.

Pirozhki 0.1.0, 2014-12-09
--------------------------
- Initial release.