@@ -142,11 +142,11 @@ index.number_of_replicas: 0
 
 # Path to directory containing configuration (this file and logging.yml):
 
-path.conf: /elasticsearch/config
+path.conf: /usr/share/elasticsearch/config
 
 # Path to directory where to store index data allocated for this node.
 
-path.data: /elasticsearch/data/data
+path.data: /usr/share/elasticsearch/data
 
 # Can optionally include more than one location, causing data to be striped across
 # the locations (a la RAID 0) on a file level, favouring locations with most free
