@@ -1,27 +1,34 @@
+datacontainer:
+  image: ubuntu:14.04
+  volumes:
+    - /var/lib/postgresql/data
+    - /usr/share/elasticsearch/data
+    - /dat
+  command: true
+
 postgres:
-  image: postgres:9.3
+  image: postgres:9.4
   restart: always
   environment:
     POSTGRES_USER: pirozhki
     POSTGRES_PASSWORD: mysecretpassword
   volumes_from:
-    - pirozhki_db_volume
+    - datacontainer
 
 redis:
-  image: redis:2.8
+  image: redis:3.0
   restart: always
   command: redis-server --appendonly yes
   volumes_from:
-    - pirozhki_db_volume
+    - datacontainer
 
 elasticsearch:
-  image: dockerfile/elasticsearch
+  image: elasticsearch:1.6
   restart: always
-  command: /elasticsearch/bin/elasticsearch -Des.config=/elasticsearch/config/elasticsearch.yml
   volumes_from:
-    - pirozhki_db_volume
+    - datacontainer
   volumes:
-    - config/elasticsearch.yml:/elasticsearch/config/elasticsearch.yml:ro
+    - config/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro
 
 logstash:
   image: pblittle/docker-logstash:0.10.0
@@ -58,7 +65,7 @@ worker:
     - variables:/pirozhki/config/variables:ro
 
 nginx:
-  image: nginx:1.7.9
+  image: nginx:1.9
   restart: always
   ports:
     - 80:80
